
[package]
name    = "rapier_example"
version = "0.1.0"
edition = "2021"

[dependencies]
bones_ecs = { path = "../.." }
rapier2d = { version = "0.22.0", features = ["enhanced-determinism", "debug-render"] }
bones_ecs_macros = { path = "../../macros" }

# debug rendering (macroquad has nice ergonomics for drawing lines etc)
macroquad = "0.4.11"
